# scraper

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  lb.yml  main.py  pyproject.toml  requirements.txt  utils.py  vercel.json
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: api-deploy.yml  api-unit-test.yml  docker-build-push.yml
api/: index.py
backend/: .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
backend/core/: config.py  deps.py
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js  tailwind.config.js  tailwind.css
